--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4 Fundamentals of Computer Programming</title>
-
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li>ADVANCE WEB DESIGN</li>
-            <li>HOME</li>
-            <li>DEMO</li>
-            <li>ABOUT</li>
+            <li><a href="index.html">ADVANCE WEB DESIGN</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="">DEMO</a></li>
+            <li><a href="">ABOUT</a></li>
         </ul>
     </nav>
 
