--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <nav>
+        <div class="logo">
+            <img id="logo" src="/assets/img/javascript-logo.png" alt="Javascript Logo">
+            <a id="logo-link" href="index.html">ADVANCE WEB DESIGN</a>
+        </div>
         <ul>
-            <li><a href="index.html">ADVANCE WEB DESIGN</a></li>
             <li><a href="index.html">HOME</a></li>
             <li><a href="">DEMO</a></li>
             <li><a href="">ABOUT</a></li>
@@ -22,7 +25,7 @@
             <p id="greetings">Hello and Welcome!</p>
             <p id="description">This website will demonstrate the</p>
             <h1>4 Fundamentals <br> Computer Programming</h1>
-            <button inputmode="button">Click Here to get Started!</button>
+            <button inputmode="button"><a href="/pages/page1/index.html">Click Here to get Started!</a></button>
         </header>
         <img id="hero-image" src="/assets/img/hero-image.png" alt="">
         
