--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -36,8 +36,10 @@
     <br>
     <p>What is your name?</p>
     <input id="name" type="text">
+
+    <p>"Your name is: </p>
     <p id="name"></p>
-    
+
     <h2>3. Conditional Statements</h2>
     <p>Conditional statements in programming are used to control the flow of a program based on certain conditions. These statements allow the execution of different code blocks depending on whether a specified condition evaluates to true or false, providing a fundamental mechanism for decision-making in algorithms. </p>
 
