--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -13,7 +13,7 @@
             <a id="logo-link" href="index.html">ADVANCE WEB DESIGN</a>
         </div>
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="/index.html">HOME</a></li>
             <li><a href="/pages/page1/index.html">DEMO</a></li>
             <li><a href="">ABOUT</a></li>
         </ul>
