--- a/index.html
+++ b/index.html
@@ -3,34 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4 Fundamentals of Computer Programming</title>
+
+    <title>4 Fundamentals of Computer Programming Using JavaScript Demo</title>
+
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <img id="logo" src="/assets/img/javascript-logo.png" alt="Javascript Logo">
-            <a id="logo-link" href="index.html">ADVANCE WEB DESIGN</a>
+        <div>
+            <a href="index.html">
+                <div class="logo-title">
+                    <img id="logo" src="/assets/img/javascript-logo.png" alt="Javascript Logo">
+                    <p>ADVANCE WEB DESIGN</p>
+                </div>
+            </a>
         </div>
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="">DEMO</a></li>
+            <li><a href="/pages/page1/index.html">DEMO</a></li>
             <li><a href="">ABOUT</a></li>
         </ul>
     </nav>
-
-
     <section id="hero-section">
         <header>
             <p id="greetings">Hello and Welcome!</p>
             <p id="description">This website will demonstrate the</p>
-            <h1>4 Fundamentals <br> Computer Programming</h1>
+            <h1>4 Fundamentals of <br> Computer Programming <br><span>Using JavaScript</span></h1>
             <button inputmode="button"><a href="/pages/page1/index.html">Click Here to get Started!</a></button>
         </header>
         <img id="hero-image" src="/assets/img/hero-image.png" alt="">
-        
-
     </section>
-    
 </body>
 </html>
