--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>4 Fundamentals of Computer Programming Using JavaScript Demo</title>
 
+    <link rel="sicon" type="image/x-icon" href="assets/img/javascript-logo.ico">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
@@ -29,7 +30,7 @@
             <p id="greetings">Hello and Welcome!</p>
             <p id="description">This website will demonstrate the</p>
             <h1>4 Fundamentals of <br> Computer Programming <br><span>Using JavaScript</span></h1>
-            <button inputmode="button"><a href="/pages/page1/index.html">Click Here to get Started!</a></button>
+            <button inputmode="button"><a href="/pages/page1/index.html">Click Here to Get Started!</a></button>
         </header>
         <img id="hero-image" src="/assets/img/hero-image.png" alt="">
     </section>
