--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4 Fundamentals of Computer Programming</title>
+
+    <title>4 Fundamentals of Computer Programming Using JavaScript Demo</title>
+
+    <link rel="sicon" type="image/x-icon" href="assets/img/javascript-logo.ico">
     <link rel="stylesheet" href="/pages/page1/assets/css/style.css">
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <img id="logo" src="/assets/img/javascript-logo.png" alt="Javascript Logo">
-            <a id="logo-link" href="index.html">ADVANCE WEB DESIGN</a>
+        <div>
+            <a href="/index.html">
+                <div class="logo-title">
+                    <img id="logo" src="/assets/img/javascript-logo.png" alt="Javascript Logo">
+                    <p>ADVANCE WEB DESIGN</p>
+                </div>
+            </a>
         </div>
         <ul>
             <li><a href="/index.html">HOME</a></li>
@@ -20,38 +27,33 @@
     </nav>
 
     <header>
-        <h1>4 Fundamentals <br> Computer Programming</h1>
-
+        <h1>4 Fundamentals of Computer Programming <br><span>Using JavaScript</span></h1>
     </header>
+
     <section class="main">
-    <h2>1. Variable Declaration</h2>
-    <p>Variables are containers for storing data values, a memory location for a data type. Variables are created using a declaration or keyword that varies across languages.
+        <div class="one-and-two">
+        <div class="container">
+            <h2>1 Variable Declaration</h2>
+            <p>Variables are containers for storing data values, a memory location for a data type. Variables are created using a declaration or keyword that varies across languages.
+        </div>
+        <div class="container">
+            <h2>2 Input and Output</h2>
+            <p>Input and output, or I/O is the communication between an information processing system, such as a computer, and the outside world, possibly a human or another information processing system. Inputs are the signals or data received by the system and outputs are the signals or data sent from it.</p>
 
-    Variable names are usually alphanumeric, that is, they contain a-z and 0-9. They can also include special characters like underscore or the dollar sign.
-        
-    Variables can hold values of any data type supported by the programming language. This value may change during program execution.</p>
+        </div>
+        </div>
 
-    <h2>2. Input and Output</h2>
-    <p>Input and output, or I/O is the communication between an information processing system, such as a computer, and the outside world, possibly a human or another information processing system. Inputs are the signals or data received by the system and outputs are the signals or data sent from it.</p>
-    <br>
-    <p>What is your name?</p>
-    <input id="name" type="text">
+        <div class="three-and-four">
+        <div class="container">
+            <h2>3 Conditional Statements</h2>
+            <p>Conditional statements in programming are used to control the flow of a program based on certain conditions. These statements allow the execution of different code blocks depending on whether a specified condition evaluates to true or false, providing a fundamental mechanism for decision-making in algorithms. </p>
+        </div>
 
-    <p>"Your name is: </p>
-    <p id="name"></p>
-
-    <h2>3. Conditional Statements</h2>
-    <p>Conditional statements in programming are used to control the flow of a program based on certain conditions. These statements allow the execution of different code blocks depending on whether a specified condition evaluates to true or false, providing a fundamental mechanism for decision-making in algorithms. </p>
-
-    <button type="button" id="on-switch"> On</button>
-    <button type="button" onclick="OffSwitch" id="off-switch">Off</button>
-
-    <br>
-    <img class="off" src="off.jpg" alt="">
-
-
-    <h2>4. Looping Statemnets</h2>
-    <p>Loops or Iteration Statements in Programming are helpful when we need a specific task in repetition. They're essential as they reduce hours of work to seconds</p>
+        <div class="container">
+            <h2>4 Looping Statemnets</h2>
+            <p>Loops or Iteration Statements in Programming are helpful when we need a specific task in repetition. They're essential as they reduce hours of work to seconds</p>
+        </div>
+      </div>
     </section> 
 
     <script src="/pages/page1/assets/js/scripts.js"></script>
