--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>4 Fundamentals of Computer Programming Using JavaScript Demo</title>
 
     <link rel="sicon" type="image/x-icon" href="assets/img/javascript-logo.ico">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <nav>
