--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 
     <title>4 Fundamentals of Computer Programming Using JavaScript Demo</title>
 
-    <link rel="sicon" type="image/x-icon" href="assets/img/javascript-logo.ico">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="sicon" type="image/x-icon" href="./assets/img/javascript-logo.ico">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <nav>
         <div>
-            <a href="index.html">
+            <a href="./index.html">
                 <div class="logo-title">
-                    <img id="logo" src="/assets/img/javascript-logo.png" alt="Javascript Logo">
+                    <img id="logo" src="./assets/img/javascript-logo.png" alt="Javascript Logo">
                     <p>ADVANCE WEB DESIGN</p>
                 </div>
             </a>
         </div>
         <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="/pages/page1/index.html">DEMO</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./pages/page1/index.html">DEMO</a></li>
             <li><a href="">ABOUT</a></li>
         </ul>
     </nav>
@@ -30,9 +30,9 @@
             <p id="greetings">Hello and Welcome!</p>
             <p id="description">This website will demonstrate the</p>
             <h1>4 Fundamentals of <br> Computer Programming <br><span>Using JavaScript</span></h1>
-            <button inputmode="button"><a href="/pages/page1/index.html">Click Here to Get Started!</a></button>
+            <button inputmode="button"><a href="./pages/page1/index.html">Click Here to Get Started!</a></button>
         </header>
-        <img id="hero-image" src="/assets/img/hero-image.png" alt="">
+        <img id="hero-image" src="./assets/img/hero-image.png" alt="">
     </section>
 </body>
 </html>
