--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -6,22 +6,22 @@
 
     <title>4 Fundamentals of Computer Programming Using JavaScript Demo</title>
 
-    <link rel="sicon" type="image/x-icon" href="assets/img/javascript-logo.ico">
-    <link rel="stylesheet" href="/pages/page1/assets/css/style.css">
+    <link rel="sicon" type="image/x-icon" href="../assets/img/javascript-logo.ico">
+    <link rel="stylesheet" href="../page1/assets/css/style.css">
 </head>
 <body>
     <nav>
         <div>
-            <a href="/index.html">
+            <a href="../../index.html">
                 <div class="logo-title">
-                    <img id="logo" src="/assets/img/javascript-logo.png" alt="Javascript Logo">
+                    <img id="logo" src="../../assets/img/javascript-logo.png" alt="Javascript Logo">
                     <p>ADVANCE WEB DESIGN</p>
                 </div>
             </a>
         </div>
         <ul>
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/pages/page1/index.html">DEMO</a></li>
+            <li><a href="../../index.html">HOME</a></li>
+            <li><a href="../page1/index.html">DEMO</a></li>
             <li><a href="">ABOUT</a></li>
         </ul>
     </nav>
@@ -56,6 +56,6 @@
       </div>
     </section> 
 
-    <script src="/pages/page1/assets/js/scripts.js"></script>
+    <script src="../pages/page1/assets/js/scripts.js"></script>
 </body>
 </html>
