--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <ul>
-            <li><a href="./index.html">HOME</a></li>
+            <li><a id="home" href="./index.html">HOME</a></li>
             <li><a href="./pages/page1/index.html">DEMO</a></li>
             <li><a href="">ABOUT</a></li>
         </ul>
@@ -28,7 +28,7 @@
     <section id="hero-section">
         <header>
             <p id="greetings">Hello and Welcome!</p>
-            <p id="description">This website will demonstrate the</p>
+            <p class="description">This website will demonstrate the</p>
             <h1>4 Fundamentals of <br> Computer Programming <br><span>Using JavaScript</span></h1>
             <button inputmode="button"><a href="./pages/page1/index.html">Click Here to Get Started!</a></button>
         </header>
