--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -6,7 +6,7 @@
 
     <title>4 Fundamentals of Computer Programming Using JavaScript Demo</title>
 
-    <link rel="sicon" type="image/x-icon" href="../assets/img/javascript-logo.ico">
+    <link rel="sicon" type="image/x-icon" href="../../assets/img/javascript-logo.ico">
     <link rel="stylesheet" href="../page1/assets/css/style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
         </div>
         <ul>
             <li><a href="../../index.html">HOME</a></li>
-            <li><a href="../page1/index.html">DEMO</a></li>
+            <li><a id="demo" href="../page1/index.html">DEMO</a></li>
             <li><a href="">ABOUT</a></li>
         </ul>
     </nav>
