--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -74,6 +74,9 @@
         <ul id="loopOutput"></ul>
         </div>
       </div>
+      <div >
+        <button id="back" inputmode="button"><a href="../../index.html">Click Here to Go Back</a></button>
+      </div>
     </section> 
 
     <script src="../page1/assets/js/scripts.js"></script>
