--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="container">
-            <h2>4 Looping Statemnets</h2>
+            <h2>4 Looping Statements</h2>
             <p>Loops or Iteration Statements are helpful when we need a specific task in repetition. They're essential as they reduce hours of work to seconds. Loops are fundamental to the concept of iteration in programming, enhancing code efficiency, readability and promoting the reuse of code logic.</p>
 
             <p class="demonstration">Demonstration</p>
