--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -48,7 +48,7 @@
             <label for="userInput">Enter any word: </label>
             <input type="text" id="userInput">
             <button onclick="showInput()">Submit</button>
-            <p id = "output"></p>
+            <p id = "output" class="output"></p>
 
         </div>
         </div>
@@ -71,7 +71,7 @@
             <p class="demonstration">Demonstration</p>
             <label for="userInput">Click button to: </label>
         <button onclick="displayNumbers()">Display Numbers 1-7</button>
-        <ul id="loopOutput"></ul>
+        <ul id="loopOutput" class="output"></ul>
         </div>
       </div>
       <div >
